# lox

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  a.txt  clang-errors.txt
cmake/: clang-cxx-dev-tools.cmake
examples/: a.lox  broken_closure.lox  example.lox  fib_function.lox  function.lox  make_counter.lox
include/: box.hpp  box_id.hpp  enviroment.hpp  error.hpp  interpreter.hpp  lox_callable.hpp  object.hpp  parser.hpp  resolver.hpp  scanner.hpp  token.hpp  token_type.hpp
include/expr/: ast_printer.hpp  expr.hpp
include/stmt/: stmt.hpp
src/: CMakeLists.txt  ast_printer.cpp  ast_printer.hpp  box.hpp  box_id.cpp  enviroment.cpp  error.cpp  error.hpp  expr.cpp  interpreter.cpp  interpreter.hpp  lox_callable.cpp  main.cpp  object.cpp  parser.cpp  parser.hpp  resolver.cpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
src/expr/: CMakeLists.txt  ast_printer.cpp  expr.cpp  expr.hpp
src/stmt/: CMakeLists.txt  stmt.cpp
tools/: generate_ast.cpp
